--- a/myself/package.json
+++ b/myself/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && ./shell/copyDist.sh",
     "preview": "vite preview"
   },
   "dependencies": {
