--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14' # Change this to your desired Node.js version
+
+    - name: which dir
+      run: cd myself
         
     - name: Install dependencies
       run: npm install
