--- a/myself/package.json
+++ b/myself/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "release": "npm run build && ./shell/copyDist.sh",
+    "release": "npm run build && node ./shell/copyDist.js",
     "build": "vite build",
     "preview": "vite preview"
   },
